--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 logging.level.=ERROR
 logging.level.org.springframework.web=ERROR
 logging.level.org.springframework=ERROR
-logging.level.org.giste.club=DEBUG
+logging.level.org.giste.club.server=DEBUG
