--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ logging.level.=ERROR
 logging.level.org.springframework.web=ERROR
 logging.level.org.springframework=ERROR
 logging.level.org.giste.club.server=DEBUG
+
+#Server
+server.context-path=/rest
