Implemented validator for max age in Category.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ logging.level.=ERROR
 logging.level.org.springframework.web=ERROR
 logging.level.org.springframework=ERROR
 logging.level.org.giste.club.server=DEBUG
+logging.level.org.giste.club=DEBUG
 
 #Server
 server.context-path=/rest
